--- a/focason-core.yml
+++ b/focason-core.yml
@@ -6,6 +6,11 @@ server:
 spring:
   application:
     name: focason-core
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 eureka:
   instance:
@@ -28,3 +33,9 @@ jwt:
   access_token_expires_in: 3600 # 単位：秒
   refresh_token_expires_in: 604800 # 単位：秒
   refresh_token_header: X-REFRESH-TOKEN
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
