--- a/focason-gateway.yml
+++ b/focason-gateway.yml
@@ -11,8 +11,8 @@ spring:
   rabbitmq:
     host: localhost
     port: 5672
-    username: root
-    password: password
+    username: guest
+    password: guest
   cloud:
     gateway:
       routes:
