--- a/focason-oauth2.yml
+++ b/focason-oauth2.yml
@@ -28,3 +28,5 @@ jwt:
   access_token_expires_in: 1200 # 単位：秒
   refresh_token_expires_in: 604800 # 単位：秒
   refresh_token_header: X-REFRESH-TOKEN
+
+name: tester
