--- a/focason-oauth2.yml
+++ b/focason-oauth2.yml
@@ -34,7 +34,7 @@ jwt:
   refresh_token_expires_in: 604800 # 単位：秒
   refresh_token_header: X-REFRESH-TOKEN
 auth:
-  name: tester
+  name: admin
 
 management:
   endpoints:
