--- a/focason-gateway.yml
+++ b/focason-gateway.yml
@@ -24,24 +24,24 @@ spring:
           uri: lb://focason-user
           predicates:
             - Path=/users/**
-  security:
-    user:
-      name: root
-      password: password
-  datasource:
-    #druid连接池
-    type: com.alibaba.druid.pool.DruidDataSource
-    druid:
-      url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_SCHEMA:focason}?useSSL=false&autoReconnect=true&characterEncoding=UTF-8&useUnicode=yes
-      username: ${DB_USERNAME:root}
-      password: ${DB_PASSWORD:password}
-      web-stat-filter:
-        enabled: true
-      stat-view-servlet:
-        enabled: true
-        login-username: admin
-        login-password: 123456
-        reset-enable: false
+#  security:
+#    user:
+#      name: root
+#      password: password
+#  datasource:
+#    #druid连接池
+#    type: com.alibaba.druid.pool.DruidDataSource
+#    druid:
+#      url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_SCHEMA:focason}?useSSL=false&autoReconnect=true&characterEncoding=UTF-8&useUnicode=yes
+#      username: ${DB_USERNAME:root}
+#      password: ${DB_PASSWORD:password}
+#      web-stat-filter:
+#        enabled: true
+#      stat-view-servlet:
+#        enabled: true
+#        login-username: admin
+#        login-password: 123456
+#        reset-enable: false
 
 eureka:
   instance:
@@ -54,9 +54,6 @@ eureka:
 logging:
   level:
     root: INFO
-    org.springframework.web: INFO
-    org.springframework.security: INFO
-    org.springframework.security.oauth2: INFO
 
 management:
   endpoints:
