--- a/focason-gateway.yml
+++ b/focason-gateway.yml
@@ -36,6 +36,9 @@ eureka:
 logging:
   level:
     root: INFO
+    org.springframework.web: INFO
+    org.springframework.security: INFO
+    org.springframework.security.oauth2: INFO
 
 management:
   endpoints:
