--- a/focason-gateway.yml
+++ b/focason-gateway.yml
@@ -18,13 +18,13 @@ spring:
       client:
         provider:
           cognito:
-            issuerUri: https://cognito-idp.ap-northeast-1.amazonaws.com/ap-northeast-1_66Rm8XNOz
+            issuerUri: https://cognito-idp.ap-northeast-1.amazonaws.com/ap-northeast-1_0FmxrlCHU
             user-name-attribute: username
         registration:
           cognito:
-            client-id: ekotpetmo0dkckfesb5sm9bq2 # focason-cognito-client
-            client-secret: cr2qpd1rkdmhnm6lkja5sj1e9b9tg1v436hr5qrp3l7053l4uo7
-            client-name: focason-cognito-client
+            client-id: 4enjeqtshg31g7hu4ie6kndsp # focason-app-client
+            client-secret: hqfp322m067f7gv3kp9fcrjl876ctbj3i5k8gnl0p1auqslg340
+            client-name: focason-app-client
             provider: cognito
             scope: openid
             redirect-uri: 'http://localhost:8080/api/cognito/callback'
