--- a/focason-user.yml
+++ b/focason-user.yml
@@ -4,6 +4,10 @@ server:
 spring:
   application:
     name: focason-user # 应用名称
+  main:
+    web-application-type: reactive # 程序类型
+    allow-bean-definition-overriding: true
+    allow-circular-references: true # 允许cloud:
   rabbitmq:
     host: {RABBITMQ_HOST:localhost} # RabbitMQ主机名
     port: {RABBITMQ_PORT:5672} # RabbitMQ端口
