--- a/focason-user.yml
+++ b/focason-user.yml
@@ -3,9 +3,9 @@ server:
   servlet:
     context-path: /users # 应用的上下文路径
 
-#security:
-#  basic:
-#    enabled: false
+security:
+  basic:
+    enabled: false
 
 spring:
   application:
