--- a/focason-user.yml
+++ b/focason-user.yml
@@ -27,11 +27,11 @@ spring:
     database-platform: org.hibernate.dialect.MySQLDialect
     open-in-view: off
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: refresh, bus-refresh # 为Actuator开放所需监控地址
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: refresh, bus-refresh # 为Actuator开放所需监控地址
 
 # ログ
 logging:
@@ -52,4 +52,4 @@ cloud:
 #doma:
 #  dialect: mysql
 
-foo: 66666666
+foo: 777777
