--- a/focason-user.yml
+++ b/focason-user.yml
@@ -31,11 +31,11 @@ spring:
       exposure:
         include: bus-refresh
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: refresh, bus-refresh # 为Actuator开放所需监控地址
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: refresh, bus-refresh # 为Actuator开放所需监控地址
 
 # ログ
 logging:
