--- a/focason-user.yml
+++ b/focason-user.yml
@@ -31,11 +31,11 @@ spring:
       exposure:
         include: refresh, busrefresh
 
-#management:
-#  endpoints:
-#    web:
-#      exposure:
-#        include: refresh, bus-refresh # 为Actuator开放所需监控地址
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*" # 为Actuator开放所需监控地址
 
 # ログ
 logging:
