--- a/focason-user.yml
+++ b/focason-user.yml
@@ -38,3 +38,17 @@ management:
 logging:
   level:
     root: INFO
+    
+# AWS
+cloud:
+  aws:
+    region: 'ap-northeast-1'
+    s3:
+      file-upload:
+        bucket-name: focason-sandbox
+        prefix:
+        pre-signed-url-valid-minutes: 15
+    cognito:
+      user-pool-id: ap-northeast-1_0FmxrlCHU
+      client-id: 4enjeqtshg31g7hu4ie6kndsp
+      client-secret: hqfp322m067f7gv3kp9fcrjl876ctbj3i5k8gnl0p1auqslg340
