--- a/focason-management.yml
+++ b/focason-management.yml
@@ -9,7 +9,7 @@ cloud:
     region: ${AWS_REGION:ap-northeast-1}
     s3:
       file-upload:
-        bucket-name: ${AWS_BUCKET_NAME:focason-sandbox}
+        bucket-name: ${AWS_BUCKET_NAME:focason-cloud-sandbox}
         prefix:
         pre-signed-url-valid-minutes: ${PRESIGNED_URL_VALID_MINUTES:1440} # 最大10080　一日1440
     cognito:
