Refactor config files and add platform service config
Removed legacy configuration files for core, file, management, product, stock, and user services. Updated focason-gateway.yml with improved logging configuration. Added a new focason-platform-service.yml with detailed logging, email, and AWS S3 configuration.

--- a/focason-gateway.yml
+++ b/focason-gateway.yml
@@ -1,4 +1,8 @@
-# 系统日志输出级别
+# ----------------------------------------------------
+# 1. Logging Configuration
+# ----------------------------------------------------
 logging:
+  file:
+    name: logs/focason-gateway.log                                   # Log file path
   level:
-    root: ${LOG_LEVEL:INFO}
+    root: ${LOG_LEVEL:INFO}                                          # Root logging level
