Update logging levels and expand platform config
Changed default logging levels from DEBUG to INFO in focason-gateway.yml. Significantly expanded focason-platform-service.yml with detailed Spring Boot, RabbitMQ, datasource, Jackson, FreeMarker, JPA, AWS, mail, Redis, and Actuator configurations, as well as improved logging and project-specific settings.

--- a/focason-gateway.yml
+++ b/focason-gateway.yml
@@ -43,6 +43,6 @@ logging:
   file:
     name: logs/focason-gateway.log                                   # Log file path
   level:
-    root: ${LOG_LEVEL:DEBUG}                                          # Root logging level
-    org.springframework.amqp: ${LOG_LEVEL:DEBUG}
-    org.springframework.retry: ${LOG_LEVEL:DEBUG}
+    root: ${LOG_LEVEL:INFO}                                          # Root logging level
+    org.springframework.amqp: ${LOG_LEVEL:INFO}
+    org.springframework.retry: ${LOG_LEVEL:INFO}
